### build(Docker): Building docker image and updating libraries (HEAD -> feat/ApacheSIS)
>Mon, 8 Apr 2024 16:30:54 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### tweak(GML): Changed context for loading the GML files (origin/feat/ApacheSIS)
>Mon, 8 Apr 2024 12:35:17 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(GML): Changed GML generation to use source ApacheSIS instead of CLI
>Mon, 8 Apr 2024 12:24:28 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### tweak(Git): Git ignore logs
>Mon, 8 Apr 2024 09:47:46 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### tweak(Git): Git ignore logs
>Mon, 8 Apr 2024 09:45:28 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(GML generation): Optimizing the GML generation with multithreading
>Fri, 5 Apr 2024 17:15:23 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(GML generation): Added code for GML generation, using ApacheSIS + Cleanup
>Fri, 5 Apr 2024 16:17:28 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### refactor(test): Better exception management for tests. 'requests' automatically close, no need to response.close()
>Fri, 5 Apr 2024 11:08:16 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### doc(search): Documentation tweaks
>Fri, 5 Apr 2024 09:27:27 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(EPSG): Added necessary files from the EPSG extension; used by ApacheSIS.